update: add logic to comodities